Clean up env setup

--- a/example.env
+++ b/example.env
@@ -5,14 +5,18 @@ ASSET_UNAUTHORIZED_PATHS=guide-items
 AWS_MOBILEAPP_ACCESS_KEY_ID=
 AWS_MOBILEAPP_SECRET_ACCESS_KEY=
 AWS_MOBILEAPP_REGION=
-AWS_S3_ACCESS_KEY_ID=
-AWS_S3_SECRET_ACCESS_KEY=
-AWS_S3_BUCKET=
-AWS_S3_BUCKET_REGION=
-AWS_S3_ENDPOINT=
-AWS_S3_SIGNER_ENDPOINT=http://minio:9000
+AWS_S3_ACCESS_KEY_ID=minioadmin
+AWS_S3_SECRET_ACCESS_KEY=minioadmin
+AWS_S3_BUCKET=app
+AWS_S3_BUCKET_REGION=us-east-1
+AWS_S3_ENDPOINT=http://minio:9000
+AWS_S3_SIGNER_ENDPOINT=
 BASE_HOST=peakresponse.localhost
 BASE_URL=http://peakresponse.localhost:3000
+DATABASE_URL=postgres://postgres@db/app
+DEMO_AGENCIES=
+ESO_STAGING_USERNAME=
+ESO_STAGING_PASSWORD=
 EXPRESS_LOG_LEVEL=dev
 EXPRESS_SUBDOMAIN_OFFSET=2
 GOOGLE_ANALYTICS_MEASUREMENT_ID=
@@ -20,6 +24,10 @@ GOOGLE_MAPS_API_KEY=
 GOOGLE_MAPS_SERVER_API_KEY=
 GOOGLE_RECAPTCHA_SITE_KEY=
 GOOGLE_RECAPTCHA_SECRET_KEY=
+HYANNIS_HOST=
+HYANNIS_PORT=
+HYANNIS_USERNAME=
+HYANNIS_PASSWORD=
 MARKETING_BLACKLIST=
 MARKETING_BLOG=
 MARKETING_BLOG_FEED=
