--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -4,7 +4,7 @@ services:
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
   minio:
-    image: minio/minio:RELEASE.2024-01-29T03-56-32Z
+    image: minio/minio:latest
     ports:
       - '9000:9000'
       - '9001:9001'
