--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - 1080:1080
       - 1025:1025
   minio:
-    image: minio/minio:RELEASE.2024-01-29T03-56-32Z
+    image: minio/minio:latest
     ports:
       - 9000:9000
       - 9001:9001
