--- a/angular/projects/shared/package.json
+++ b/angular/projects/shared/package.json
@@ -2,15 +2,15 @@
   "name": "shared",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^17.3.12",
-    "@angular/core": "^17.3.12",
-    "@angular/forms": "^17.3.12",
-    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@angular/common": "^18.2.13",
+    "@angular/core": "^18.2.13",
+    "@angular/forms": "^18.2.13",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
+    "@talentia/ngx-sortablejs": "^11.1.4",
     "activestorage": "^5.2.8-1",
     "inflection": "^3.0.0",
     "jsonpath-plus": "^10.3.0",
     "ngx-dropzone": "^3.1.0",
-    "ngx-sortablejs": "^11.1.0",
     "sortablejs": "^1.15.1",
     "uuid": "^9.0.1"
   },
