--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -4,13 +4,13 @@ services:
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
   minio:
-    image: minio/minio:latest
+    image: minio/minio:RELEASE.2025-02-18T16-25-55Z
     ports:
       - '9000:9000'
       - '9001:9001'
     command: 'server /data --console-address ":9001"'
   minio_setup:
-    image: minio/mc
+    image: minio/mc:RELEASE.2025-02-15T10-36-16Z
     depends_on:
       - minio
     entrypoint: >
