--- a/angular/package.json
+++ b/angular/package.json
@@ -29,6 +29,7 @@
     "lodash-es": "^4.17.21",
     "luxon": "^3.5.0",
     "ngx-dropzone": "^3.1.0",
+    "ngx-mask": "^19.0.6",
     "rxjs": "^7.8.1",
     "sortablejs": "^1.15.6",
     "tslib": "^2.8.1",
