--- a/angular/projects/shared/package.json
+++ b/angular/projects/shared/package.json
@@ -11,6 +11,7 @@
     "inflection": "^3.0.2",
     "jsonpath-plus": "^10.3.0",
     "ngx-dropzone": "^3.1.0",
+    "ngx-mask": "^19.0.6",
     "sortablejs": "^1.15.6",
     "uuid": "^11.1.0"
   },
