--- a/angular/package.json
+++ b/angular/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^19.1.7",
     "@angular/router": "^19.1.7",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@ngx-translate/core": "^16.0.4",
     "@popperjs/core": "^2.11.8",
     "@talentia/ngx-sortablejs": "^11.1.4",
     "activestorage": "^5.2.8-1",
