--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
     "express-fileupload": "^1.5.1",
+    "express-rate-limit": "^7.5.0",
     "fast-json-patch": "^3.1.1",
     "fs-extra": "^11.3.0",
     "http-errors": "~2.0.0",
