[Closes #476] Put ESO export history filter behind env var flag

--- a/example.env
+++ b/example.env
@@ -15,6 +15,7 @@ BASE_HOST=peakresponse.localhost
 BASE_URL=http://peakresponse.localhost:3000
 DATABASE_URL=postgres://postgres@db/app
 DEMO_AGENCIES=
+ESO_FILTER_HISTORY=
 ESO_STAGING_USERNAME=
 ESO_STAGING_PASSWORD=
 EXPRESS_LOG_LEVEL=dev
