--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@node-oauth/oauth2-server": "^5.2.0",
+    "@scalar/express-api-reference": "^0.8.16",
     "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
@@ -157,7 +158,9 @@
     "ws": "^8.18.0",
     "xlsx": "^0.18.5",
     "xml-formatter": "^3.6.4",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "zod": "^4.1.5",
+    "zod-openapi": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
